--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,10 @@ dependencies = [
     "matplotlib>=3.8.0",
     "seaborn>=0.13.0",
     "faker>=22.0.0",
+    # API dependencies
+    "fastapi>=0.109.0",
+    "uvicorn[standard]>=0.27.0",
+    "httpx>=0.26.0",
 ]
 
 [project.optional-dependencies]
