--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,7 @@ version = "0.1.0"
 description = "Agentic AI system for AB testing experimentation lifecycle"
 readme = "README.md"
 requires-python = ">=3.11"
-authors = [
-    {name = "Your Name", email = "your.email@example.com"}
-]
+authors = []
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
